--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     <div class="hint" id="hint">“No” seems a bit shy 😈</div>
 
     <section class="result" id="result">
-      <h2>I knew you’d say yes, Mahek! 🎉💖</h2>
+      <h2>I knew you’d say yes, My baby ! 🎉💖</h2>
       <img
         src="https://media.giphy.com/media/26ufdipQqU2lhNA4g/giphy.gif"
         width="320"
@@ -260,3 +260,4 @@
   </script>
 </body>
 </html>
+
